fixed footer spacing

--- a/public/style.css
+++ b/public/style.css
@@ -1514,7 +1514,7 @@ label {
 }
 
 .social-list {
-  text-align: center;
+  text-align: left;
 }
 
 .social-list ul li {
